# project-diamond.github.io

./: .travis.yml  Config.hs  LICENSE  README.md  atom.xml  index.html  site.hs  website.cabal
Website/: News.hs  Utils.hs
logo/: .gitignore  Makefile  diamond3d.asy
news/: 2016-12-07-Project-Diamond-Goals-and-Directions.md  index.html
news/2016-12-07-Project-Diamond-Goals-and-Directions/: index.html
scripts/: deploy.sh
templates/: footer.html  navigation.html  post.html  wrapper.html
templates/root/: news-list.html  page-header.html  social.html
