name:                website
version:             0.1.0.0
synopsis:            Hakyll based site of Project Diamond.
description:         Please see README.md
homepage:            https://github.com/project-diamond/website#readme
license:             BSD3
license-file:        LICENSE
author:              Project Diamond
maintainer:          ppk@cse.iitk.ac.in
copyright:           2016 Project Diamond
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules: Config
               , Website.News
               , Website.Utils
  build-depends:       base == 4.*,
                       hakyll,
                       filepath
